---------------------------------------------------------------------------------------------------
Version: 4.2.4
Date: ????
  Changes:
    - Updated for omnilib 4.2.4
  Bugfixes:
    - Fixed that the place results of hidden items were compressed if they were not hidden as well
---------------------------------------------------------------------------------------------------
Version: 4.2.3
Date: 2024.11.26
  Bugfixes:
    - Fixed a scripting error when launching a rocket without SA enabled
    - Fixed compressed satellites not having send_to_orbit_mode set
    - Fixed a scripting error when using the decompression hotkey
    - Fixed science packs in compressed techs not being replaced properly
---------------------------------------------------------------------------------------------------
Version: 4.2.2
Date: 2024.11.23
  Changes:
    - Updated graphics definition for omnilib 4.2.2
---------------------------------------------------------------------------------------------------
Version: 4.2.1
Date: 2024.11.22
  Bugfixes:
    - Fixed a crash when 1x1 compressors were enabled due to faulty fluidbox definitions
---------------------------------------------------------------------------------------------------
Version: 4.2.0
Date: 2024.11.19
  Changes:
    - Updated fopr factorio 2.0
---------------------------------------------------------------------------------------------------
Version: 4.1.29
Date: 2024.06.17
  Features:
    - Added mod settings to optionally (de-)activate item, entity, recipe and resource compression
      You can freely choose which features you want to play with
      (Recipe and resource compression require item compression)
      All features are enabled by default. (Existing saves are not affected)
---------------------------------------------------------------------------------------------------
Version: 4.1.28
Date: 2024.01.17
  Changes:
    - Pollution now scales linearly instead of exponentionally with compression tiers.